# pycounts_ca

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
tests/: test_pycounts_ca.py
