[tool.poetry]
name = "pycounts_ca"
version = "0.1.0"
description = "Calculates word counts in a text file!"
authors = ["Christopher Alexander"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
